2012-04-04  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* providerDrv.c, providerMgr.c, providerMgr.h, support.c:
	[ 3416060 ] SIGSEGV in tool_mm_flush()

2012-04-03  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* providerDrv.c:
	[ 3498496 ] sfcb hangs and fails to respond to CIM requests

	* brokerUpc.c:
	[ 3497209 ] oom panic: out of memory using fsp indprovider

	* brokerUpc.c:
	[ 3483200 ] duplicate indication deliveries

2012-04-03  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* indCIMXMLHandler.c, interopProvider.c:
	[ 3495060 ] verify filter and handler information during subscription

	* objectImpl.c:
	[ 3471814 ] segfault in objectImpl.c:131,ClObjectGetClString
        (Patch by Chris Buccella and Narasimha Sharoff)

2012-04-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3512425 ] SequenceContext needs to be set at startup

2012-04-03  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am, configure.ac, default.reg.in, profileProvider.c,
	providerMgr.c, test/xmltest/modifyInstance_regprofile.lines:
	[ 3483294 ] InternalProvider Should Handle SFCB_RegisteredProfile

2012-04-02  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* indCIMXMLHandler.c:
	[ 3485438 ] Segfault while retrying to deliver an indication

	* sfcBroker.c:
	[ 3462309 ] Do not allow multiple instances of sfcb

	* cimXmlParser.c:
	[ 3486814 ] sfcb crashes while freeing the cimxml response

2012-04-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3505407 ] Client openlog changes settings

2012-04-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3485830 ] SFCB Makes Redundant ActivateFilter Calls

2012-03-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3416054 ] Provider continues despite SIGSEGV
	(patch by Klaus Kampf)

	* httpAdapter.c:
	[ 3441028 ] sblim-sfcb fails on large https requests
	(patch by Klaus Kampf)

	* test/TestProviders/cmpiTestIndicationProvider.c: